syntax = "proto3";

// package = service;
option go_package = "grpc-base/protos";

// RequestEnterHall 请求进入大厅
message RequestEnterHall {
    string ServerAddr = 1;
    int64 AccountId = 2;
}

// ResponseEnterHall
message ResponseEnterHall {
    int32 Result = 1;
    int64 AccountId = 2;
    string SceneAddr = 3;
}

// RequestLeaveHall 离开战斗
message RequestLeaveHall {
    string ServerAddr = 1;
    int64 AccountId = 2;
}

// ResponseLeaveHall 离开大厅
message ResponseLeaveHall {
    int32 Result = 1;
    int64 AccountId = 2;
}

service HallService {
    rpc EnterHall(RequestEnterHall) returns (ResponseEnterHall);
    rpc LeaveHall(RequestLeaveHall) returns(ResponseLeaveHall);
}
